# fluidsynth-emscripten

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
doc/examples/: CMakeLists.txt
emscripten/: exports.txt  make-exports.js
emscripten/src/: post.js  pre.js
include/: fluidsynth.cmake
src/: CMakeLists.txt
src/utils/: fluid_settings.c  fluid_sys.c  fluid_sys.h  fluidsynth_priv.h
